#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([main], [0.0.1], [kent@matsulab.is.titech.ac.jp])
AM_INIT_AUTOMAKE(main, 0.0.1)

AC_CONFIG_SRCDIR([examples/rdma_client_test.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 examples/Makefile])

AC_OUTPUT

# Others
